@@ -990,102 +990,6 @@ likely that your Packages files are out of date. Doing an UPDATE is optional
         exit(1)
 
 
-def do_whichpkg(filename):
-    """Search for a particular file or pattern in a Debian package.
-
-    Search the Debian package archive (locally-installed packages and
-    from the Debian package archive on packages.debian.org) for any
-    packages containing a file with FILENAME in its name. The results
-    are printed to standard output.
-
-    Argument:
-    filename    Pattern to find
-    """
-
-    packages_host = "packages.debian.org"
-    ping_host(packages_host)
-
-    # display a suitable heading
-    print("%-59s %-17s" % ("File Path", "Package"))
-    print("="*59 + "-" + "="*17)
-    print("INSTALLED")
-    sys.stdout.flush()
-
-    # Get the local information first.
-    #
-    # Could ensure that we don't repeat information but for now let's
-    # just get the information out!
-    #
-    # Also need to check for diversions (like when mutt and mutt-utf8 are
-    # both installed).
-    command = "dpkg -S " + filename + " 2>/dev/null " +\
-              "| sed 's|: *|:|' " +\
-              "| grep -v '^diversion by ' " +\
-              "| awk -F: '{printf(\"%-59s %-17s\\n\", $2, $1)}'"
-    perform.execute(command)
-
-    # Now obtain the information from the Debian server
-    print("-"*77)
-    print("AVAILABLE")
-    results = tempfile.mkstemp()[1]
-    filename = filename.replace('+', '%2B')
-
-    command = "wget --timeout=60 --output-document=" + results +\
-              " http://" + packages_host +\
-              "/search\?searchon=contents\&keywords=" + filename +\
-              "\&mode=filename" +\
-              "\&suite=unstable" +\
-              "\&arch=any 2> /dev/null"
-
-    perform.execute(command)
-
-    # Test for multiple page output and handle appropriately
-    command = "grep page= " + results + " 2>&1 > /dev/null"
-    if perform.execute(command) == 0:
-        # Multiple pages of output
-        #
-        # 071104 gjw - It appears we don't get multiple pages
-        # with the new HTML format, so maybe I don't need
-        # to fix this one up. Just do a cat so that if we do
-        # then someone is bound to notice!!!!
-        command = "cat " + results
-        perform.execute(command)
-
-        # Loop over the other pages
-        command = "for i in $(grep page= " + results +\
-                  " | perl -p -e 's|.*page=||; s|&.*>||' | sort -u -k 1b,1" +\
-                  " | grep -v 1); " +\
-                  "do " +\
-                  "wget --timeout=60 --output-document=" + results +\
-                  " http://packages.debian.org/cgi-bin" +\
-                  "/search\?searchon=contents\&page=$i\&keywords=" + filename +\
-                  "\&version=unstable\&arch=amd64" +\
-                  "\&mode=path " +\
-                  " 2> /dev/null; " +\
-                  "cat " + results + " | " +\
-                  "egrep -v " +\
-                  "'^ *<|^$|^Packages search page|^package |//W3C//' | " +\
-                  "egrep -v 'page=' | " +\
-                  "perl -p -e 's|<[^>]*>||g;s|<[^>]*$||g;" +\
-                  "s|^[^<]*>||g;';" +\
-                  "done"
-        perform.execute(command)
-    else:
-        # A single page of output
-        command = "cat " + results + " | " +\
-                  "awk 'BEGIN { RS = \"</tr>\" } " +\
-                  "/\"keyword\"/ { print $0 }' | " +\
-                  "lynx -stdin -dump -nonumbers -nolist | " +\
-                  "egrep -v '^$' | " +\
-                  "sed 's|, |,|' | " +\
-                  "awk '{printf(\"%-59s %-17s\\n\", $1, $2\" \"$3\" \"$4)}'"
-        perform.execute(command)
-    print("-"*77)
-
-    if os.path.exists(results):
-        os.remove(results)
-
-
 def do_findpkg(pkg):
     "Look for a particular pkg at apt-get.org."
 
